Fix spacing issues to close #99

--- a/assets/scss/blocks/core/columns/_style.scss
+++ b/assets/scss/blocks/core/columns/_style.scss
@@ -52,7 +52,7 @@ $enable-columns-block-styles: true !default;
 @if $enable-columns-block-styles == true {
 
     /* Columns Blocks */
-    .wp-block-columns {
+    .wp-block-columns[class] {
         @include wp-block-columns-spacing;
     }
 
