--- a/style.css
+++ b/style.css
@@ -1005,6 +1005,9 @@ fieldset {
   background-color: var(--current-color-primary);
   color: var(--current-dark-primary); }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0; }
+
 h1.has-larger-font-size {
   --current-font-family: var(--theme-display-font-family);
   --current-font-size: var(--theme-display-final-font-size);
